<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_SurtidorCatalogoLubricantes">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="416dp"
        android:layout_height="735dp"
        android:src="@drawable/fondogeneral"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnHome"
        android:layout_width="63dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="#20386b"
        android:contentDescription="@string/btnHome"
        android:src="@drawable/btniniciosurtidor"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/iVBanner"
        app:layout_constraintEnd_toStartOf="@+id/btnCatalogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnCatalogo"
        android:layout_width="63dp"
        android:layout_height="41dp"
        android:backgroundTint="#20386b"
        android:contentDescription="@string/btnCatalogo"
        android:src="@drawable/btncatalogosurtior"
        android:text="@string/btnCatalogo"
        android:textSize="18sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/iVBanner"
        app:layout_constraintEnd_toStartOf="@+id/btnPedidosFinalizados"
        app:layout_constraintStart_toEndOf="@+id/btnHome"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnPedidosFinalizados"
        android:layout_width="63dp"
        android:layout_height="41dp"
        android:backgroundTint="#20386b"
        android:contentDescription="@string/btnCarrito"
        android:src="@drawable/btnpedidosfinalizados"
        android:text="@string/btnCarrito"
        android:textSize="24sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/iVBanner"
        app:layout_constraintEnd_toStartOf="@+id/btnPedidosEnProceso"
        app:layout_constraintStart_toEndOf="@+id/btnCatalogo"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnPedidosEnProceso"
        android:layout_width="63dp"
        android:layout_height="41dp"
        android:backgroundTint="#20386b"
        android:contentDescription="@string/btnCarrito"
        android:src="@drawable/btnpedidosenproceso"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/iVBanner"
        app:layout_constraintEnd_toStartOf="@+id/btnNuevosPedidos"
        app:layout_constraintStart_toEndOf="@+id/btnPedidosFinalizados"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnNuevosPedidos"
        android:layout_width="63dp"
        android:layout_height="41dp"
        android:backgroundTint="#20386b"
        android:contentDescription="@string/btnWA"
        android:src="@drawable/nuevospedidossurtidor"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/iVBanner"
        app:layout_constraintEnd_toStartOf="@+id/btnCuenta"
        app:layout_constraintStart_toEndOf="@+id/btnPedidosEnProceso"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnCuenta"
        android:layout_width="63dp"
        android:layout_height="41dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#20386b"
        android:contentDescription="@string/btnWA"
        android:src="@drawable/cuentasurtidor"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/iVBanner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnNuevosPedidos"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iVBanner"
        android:layout_width="329dp"
        android:layout_height="87dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHome"
        app:srcCompat="@drawable/titulocatalogo" />

    <ListView
        android:id="@+id/lVPedidos"
        android:layout_width="416dp"
        android:layout_height="560dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iVBanner" />

</androidx.constraintlayout.widget.ConstraintLayout>