<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/presentacionfondo"
    tools:context=".activityPresentacion">

    <ImageButton
        android:id="@+id/btnHome"
        android:layout_width="76dp"
        android:layout_height="41dp"
        android:layout_marginStart="15dp"
        android:backgroundTint="#20386b"
        android:src="@drawable/btnhome"
        android:contentDescription="@string/btnHome"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCatalogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/btnCatalogo"
        android:layout_width="76dp"
        android:layout_height="41dp"
        android:backgroundTint="#20386b"
        android:src="@drawable/btncatalogo"
        android:contentDescription="@string/btnHome"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCarrito"
        app:layout_constraintStart_toEndOf="@+id/btnHome"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/btnCarrito"
        android:layout_width="76dp"
        android:layout_height="41dp"
        android:backgroundTint="#20386b"
        android:src="@drawable/btncarrito"
        android:contentDescription="@string/btnCarrito"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCuenta"
        app:layout_constraintStart_toEndOf="@+id/btnCatalogo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/btnCuenta"
        android:layout_width="76dp"
        android:layout_height="41dp"
        android:backgroundTint="#20386b"
        android:src="@drawable/btncuenta"
        android:contentDescription="@string/btnCarrito"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnWA"
        app:layout_constraintStart_toEndOf="@+id/btnCarrito"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/btnWA"
        android:layout_width="76dp"
        android:layout_height="41dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#20386b"
        android:src="@drawable/btncontacto"
        android:contentDescription="@string/btnWA"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCuenta"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnVerCatalogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="223dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="@color/greenremasa"
        android:text="@string/btnVerCatalogo"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCarrito"
        app:layout_constraintVertical_bias="0.484" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="319dp"
        android:layout_height="176dp"
        android:layout_marginTop="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnVerCatalogo"
        app:srcCompat="@drawable/entradabaja"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="330dp"
        android:layout_height="214dp"
        android:layout_marginTop="76dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/entradaup" />


</androidx.constraintlayout.widget.ConstraintLayout>